# Catalysis_GFlowNET

./: .gitattributes  .gitignore  CLAUDE.md  INSTALL_an01.md  QUICKSTART.md  README.md  pyproject.toml
config/: pdh.yaml  run.yaml
pdh_gfn/: constants.py  profiling.py  proxy.py  seeding.py
pdh_gfn/envs/: catalyst.py  composition_pdm.py  surface.py
pdh_gfn/potential/: base.py  batch.py  emt_mock.py  uma.py
pdh_gfn/reward/: cache.py  descriptors.py  gates.py  hull.py  pipeline.py  refs.py  schedule.py  surrogate.py
pdh_gfn/structure/: builder.py  canonical.py  from_xyz.py  mp_loader.py  saver.py  slab.py
scripts/: analyze_run.py  bench_batch.py  build_surrogate_dataset.py  calibrate.py  check_hull.py  diagnose_env.py  export_candidates.py  fetch_mp_entries.py  fetch_ref_structures.py  find_candidate_structures.py  find_structure.py  plot_hull.py  plot_hull_candidates.py  plot_training.py  precompute_hull.py  probe_batch_api.py  probe_batch_api2.py  probe_batch_scaling.py  probe_inference.py  rebuild_hull_oc20.py  surrogate_b_probe.py  surrogate_probe.py  train.py  train_surrogate.py  warmup_cache.py
scripts/cluster/: 01_rebuild_hull_ternary.sh  02_check_hull.sh  03_train_ternary.sh  README.md  common.sh
tests/: test_pipeline.py
