[project]
name = "pdh-gfn"
version = "0.1.0"
description = "GFlowNet for Pd-M intermetallic PDH catalyst discovery"
requires-python = ">=3.10"
dependencies = [
    "numpy", "pymatgen", "pyxtal", "ase",
    # боевой запуск: gflownet (Mila, из исходников), torch, fairchem-core, mp-api
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pdh_gfn*"]
