[project]
name = "pdh-gfn"
version = "0.1.0"
description = "GFlowNet for Pd-M intermetallic PDH catalyst discovery"
requires-python = ">=3.11,<3.12"
dependencies = [
    # лёгкие (механика пайплайна)
    "numpy",
    "pymatgen==2026.5.4",
    "pyxtal==1.1.4",
    "ase",
    "mp-api",
    "matplotlib",
    # GFlowNet-стек (Mila gflownet — из git, см. [tool.uv.sources])
    "torch==2.8.0",
    "torchtyping==0.1.5",   # хрупкий к версии torch — пинить
    "hydra-core",
    "omegaconf",
    "gflownet",
    # UMA-потенциал
    "fairchem-core==2.21.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pdh_gfn*"]

# ─────────────────────────────────────────────────────────────────────────
# uv: воспроизведение валидированного кластерного стека (torch cu128 + UMA).
#   uv lock && uv sync   (на кластере с CUDA — локально GPU-колёса не встанут)
# ─────────────────────────────────────────────────────────────────────────

# torch берём с официального PyTorch-индекса cu128 (CUDA 12.8 на zeus)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
gflownet = { git = "https://github.com/alexhernandezgarcia/gflownet", rev = "21ebf0392cb44b21a5adc54f970eb941b2fcfff5" }

[tool.uv]
# gflownet пинит устаревшие torch==2.5.1 и numpy<2.0; форсим версии рабочего
# окружения поверх (декларативный аналог sed/--no-deps из INSTALL §2):
#   torch 2.8.0 (cu128), numpy 2.4.6 (fairchem требует >=2.0,<2.5)
override-dependencies = ["torch==2.8.0", "numpy==2.4.6"]
